--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-REACT_APP_CUBEQUERY_URL = https://cubeproxy.csopenportal.co.uk
-REACT_APP_KEY = fishfishfish
-REACT_APP_TOKEN_URL = https://projects.csopenportal.co.uk
+REACT_APP_PORTAL_URL = http://localhost:3434
