--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "file-saver": "^1.3.2",
+    "jszip": "^3.7.1",
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "node-sass": "^4.14.1",
